positions custom edit form has been implemented

--- a/app/views/layouts/after-login.html.erb
+++ b/app/views/layouts/after-login.html.erb
@@ -71,6 +71,7 @@
 
 	<!-- Lightbox and Commaon Scripts -->
     <%= render :partial=>"/layouts/common_scripts" %>
+     <%= render :partial=>"/layouts/notifications/display_growl_messages" %>
     <%= render :partial=>"/layouts/lightbox/main" %>
 
 
