--- a/app/views/users/position/_edit.html.erb
+++ b/app/views/users/position/_edit.html.erb
@@ -6,14 +6,97 @@
 <% end %>
 
 
-<div class="padding-10" style="border-radius:2px;">
 
-  <%= form_tag(path, :class => "form-horizontal padding-left-20 padding-right-20", :autocomplete=>"off", :id=>"FRM_ADVANCED_COMPANY_SEARCH" , :remote => true) do %>
-    <div class="control-group required" style="margin-bottom: 10px;">
+
+<%= simple_form_for(@position, :as => "position", :url=>path, :method => :post, :remote => true , :html => {:multipart => true, :class => "form-horizontal", :style=>"text-align:left;", :autocomplete => "off"}) do |f|  -%>
+
+
+  <div class="form-inputs" style="margin: 10px 20px;">
+    <div class="cl-10"></div>
+
+  <%= f.error_notification %>
+     
+    <%= f.input :title, :as=>:string, :input_html => {:value => @position.title ? @position.title : '' ,:style=>"text-align:left;"}   %>
+   <div class="cl-10"></div>
+   <div class="cl-10"></div>
+  <%= f.input :company_name, :as=>:string, :label =>"Company_name",  :input_html => {:value => @position.company_name ? @position.company_name : ''} %>
+   <div class="cl-10"></div>
+   <div class="cl-10"></div>
+  <%= f.input :industry_name, :as=>:string, :label =>"Industry_name",  :input_html => {:value => @position.industry_name ? @position.industry_name : '' } %>
+   <div class="cl-10"></div>
+   <div class="cl-10"></div>
+  <% if @position.is_current %>
+    <%= f.input :is_current, :as=>:boolean, :label =>"Current Job",  :checked => true ,  :input_html => {:value => @position.is_current , :id => "is_current" , :type=>"checkbox" , :style=>"float:rigt;" } %>
+  <% else %>
+    <%= f.input :is_current, :as=>:boolean, :label =>"Current Job", :checked => false ,  :input_html => {:value => false , :id => "is_current" ,:type=>"checkbox" , :style=>"float:right;" } %>
+    <% end %>
+  <div class="cl-10"></div>
+  <div class="cl-10"></div>
+  <%= f.input :start_date, :as=>:string, :label =>"Start Date",  :input_html => {:value => @position.start_date ? @position.start_date : '', :class=>"filter_date" , :style=>"width:100px;float:left;"} %>
+  <div style="float:left;display: none" id="END_DATE_DIV">
+  <%= f.input :end_date, :as=>:string, :label =>"End Date",  :input_html => {:value => @position.end_date ? @position.end_date : '', :id=>"end_date_field" , :class=>"filter_date" , :style=>"width:100px;float:left;"} %>
+  </div>
+ <div class="cl-10"></div>
+ <div class="cl-10"></div>
+  <%= f.input :summary, :as=>:string, :label =>"summary", :input_html => {:value => @position.summary ? @position.summary : '' , :type=>"text_area", :style=>"height:70px;width:300px;" } %>
+   
+
+  <%= f.submit "Save", :class=>"btn btn-info float-right margin-right-5", "data-loading-text"=>"SAving...", :onclick=>"$(this).button('loading');" %>
+    
+ 
+
+  <% end %>
+
+  </div>
+  <div class="cl"></div>
+
+ <script type="text/javascript">
+        $('.filter_date').datepicker({format: "dd,mm,yyyy"});
+
+if($("#is_current").is(':checked'))
+{
+   $("#is_current").attr({"value":true});
+   $("#END_DATE_DIV").hide();
+}
+
+if($("#is_current").is(':not(:checked)'))
+{
+   $("#is_current").attr({"value":false});
+    document.getElementById('end_date_field').value = "";
+   $("#END_DATE_DIV").show();
+}
+
+$('#is_current').bind('change', function () {
+
+ if($(this).is(':checked')) {
+    $("#is_current").attr({"value":true});
+    $("#END_DATE_DIV").hide();
+ }
+ else
+ {
+   $("#is_current").attr({"value":false});
+   document.getElementById('end_date_field').value = "";
+   $("#END_DATE_DIV").show();
+  }
+});
+
+
+ </script>
+
+  <style type="text/css">
+
+    .form-horizontal .control-label {
+text-align: left;
+}
+  </style>
+
+  <!--
+
+   <div class="control-group required" style="margin-bottom: 10px;">
       <label class="select control-label" style="width:180px;text-align:left"> Title  </label>
       <div class="controls"><%= text_field_tag("position[title]", @position.title ? @position.title : '' ,:style=>"height:24px;width:300px;") %></div>
     </div>
-  
+
     <div class="control-group required" style="margin-bottom: 10px;">
       <label class="select control-label" style="width:180px;text-align:left">  Company </label>
       <div class="controls"><%= text_field_tag("position[company_name]", @position.company_name ? @position.company_name : '' ,:style=>"height:24px;width:300px;") %></div>
@@ -47,54 +130,17 @@
           </div>
         </div>
     </div>
-     
-    <div class="control-group required" style="margin-bottom: 10px;">
+
+<div class="control-group required" style="margin-bottom: 10px;">
       <label class="select control-label" style="width:180px;text-align:left"> Summary </label>
       <div class="controls"><%= text_area_tag("position[summary]", @position.summary ? @position.summary : '' , :style=>"height:70px;width:300px;") %></div>
     </div>
 
- 
+
     <div class="form-actions" style="margin-bottom:0px;margin-top:0px;">
       <div class="cl"></div>
       <div class="float-right">
         <%= submit_tag "Save", :class => "float-right btn btn-primary", :onclick=>"$(this).button('loading');", "data-loading-text"=>"Saving..." %>
       </div>
     </div>
-
-  <% end %>
-
-  <div class="cl"></div>
-
-</div>
- <script type="text/javascript">
-        $('.filter_date').datepicker({format: "dd,mm,yyyy"});
-
-if($("#is_current").is(':checked'))
-{
-   $("#is_current").attr({"value":true});
-   $("#END_DATE_DIV").hide();
-}
-
-if($("#is_current").is(':not(:checked)'))
-{
-   $("#is_current").attr({"value":false});
-    document.getElementById('end_date_field').value = "";
-   $("#END_DATE_DIV").show();
-}
-
-$('#is_current').bind('change', function () {
-
- if($(this).is(':checked')) {
-    $("#is_current").attr({"value":true});
-    $("#END_DATE_DIV").hide();
- }
- else
- {
-   $("#is_current").attr({"value":false});
-   document.getElementById('end_date_field').value = "";
-   $("#END_DATE_DIV").show();
-  }
-});
-
-
- </script>
+  -->
