experience form has been modified for showing error styles

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -34,7 +34,6 @@
 body { font-size: 14px;
 font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial ;
 }
-
 .navbar .brand {
 font-family: 'open-sans';
 font-size:30px;
@@ -43,3 +42,21 @@ font-weight:bold;}
 p {
 font-family: 'open-sans';
 }
+
+.form-horizontal .control-label {
+    float: left;
+    width: 175px;
+    padding-top: 5px;
+    text-align: left;
+}
+.form-horizontal .controls {
+    margin-left: 260px;
+}
+input, textarea, .uneditable-input {
+    width: 300px;
+}
+.field_with_errors {color: #B94A48;}
+
+.error {margin: 2px 5px;clear: both;display: block;text-align: center;}
+
+.hint {color:#777;margin: 2px 5px;clear: both;display: block;text-align: center;}
