--- a/app/views/users/technologies/_edit.html.erb
+++ b/app/views/users/technologies/_edit.html.erb
@@ -30,4 +30,7 @@
 
 <style type="text/css">
   ul.wysihtml5-toolbar {margin-left:10%;}
+  .form-horizontal .controls {
+margin-left: 220px;
+}
 </style>
