--- a/app/views/widgets/_import_datas.html.erb
+++ b/app/views/widgets/_import_datas.html.erb
@@ -1,6 +1,6 @@
 <div class="sidebar-container" style="height: 200px;background-color: white;">
   <div class="header">
-    <p style="text-align:center;font-size: 18px;padding-top: 5px">Import your Datas</p>
+    <p style="text-align:center;font-size: 18px;padding-top: 5px">Import From</p>
   </div>
   <div class="padding-5" >
     <div class="grey-feed" style="height:35px;">
