--- a/app/views/users/dashboard/index.html.erb
+++ b/app/views/users/dashboard/index.html.erb
@@ -11,21 +11,19 @@
 
         <%= render :partial => "/users/dashboard/basic_info" %>
         <div class="cl-30"></div>
+        <div id="DIV_TECHNOLOGY_DETAILS">
         <%= render :partial => "/users/dashboard/technologies" %>
-
-
-
+        </div>
+        
         <%= render :partial => "/users/dashboard/experience" %>
 
-
+        <div id="DIV_EDUCATION_DETAILS">
         <%= render :partial => "/users/dashboard/education" %>
+       </div>
 
-
-        <%= render :partial => "/users/dashboard/certifications" %>
-
-
+        <div id="DIV_GITHUB_DETAILS">
         <%= render :partial => "/users/dashboard/opensource" %>
-
+        </div>
 
         <%= render :partial => "/users/dashboard/apps_and_software" %>
 
