--- a/app/views/widgets/_add_to_cv.html.erb
+++ b/app/views/widgets/_add_to_cv.html.erb
@@ -4,10 +4,9 @@
   </div>
   <ul class="nav nav-tabs nav-stacked">
     <li><%= link_to("Basic Information"  , edit_basic_info_path , :remote => true) %></li>
+    <li><%= link_to("Technologies"  , edit_technologies_path , :remote => true) %></li>
     <li><%= link_to("Experience"  , new_position_path , :remote => true) %></li>
-    <li><a href="#">Interests</a></li>
-    <li><a href="#">References</a></li>
-    <li><a href="#">Education</a></li>
+    <li><%= link_to("Education"  , new_education_path , :remote => true) %></li>
     <li><a href="#">Projects</a></li>
   </ul>
 </div>
