--- a/app/views/users/dashboard/_opensource.html.erb
+++ b/app/views/users/dashboard/_opensource.html.erb
@@ -1,6 +1,4 @@
-<div class="cl-30"></div>
-<div class="cl-30"></div>
-<div class="cl-30"></div>
+
 <div class="raw-fluid padding-left-10">
   <h2 class="heading" style="line-height: 5px;font-size: 20px">Open Source</h2>
   <div style="border-bottom: solid #ccc 1.5px;"></div>
@@ -21,13 +19,17 @@
           </div>
         </div>
         <p style="color:#4B4B4B;font-size: 16px;font-style: italic"><%= git.project_description %></p>
-        <%= link_to "delete" , '#' ,:style=>"float:right;margin-right:15px;" %>
-        <%= link_to "edit" , '#' , :remote => true ,:style=>"float:right;margin-right:20px;" %>
+        <%= link_to "delete" , delete_github_details_path(:id=>git.id) ,:style=>"float:right;margin-right:15px;" %>
+        <%= link_to "edit" , edit_github_details_path(:id => git.id) , :remote => true ,:style=>"float:right;margin-right:20px;" %>
 
         <div class="cl"></div>
       </div>
 
     <% end %>
+  <% else %>
+    <div class="cl-30"></div>
+    <div class="cl-30"></div>
+    <div class="cl-30"></div>
   <% end %>
 </div>
 <div class="cl-30"></div>
