--- a/app/assets/stylesheets/lightbox.css
+++ b/app/assets/stylesheets/lightbox.css
@@ -2,7 +2,7 @@
   background-color: #FFF;
   left: 40%;
   margin: 0px auto;
-  position: fixed;
+  position: absolute;
   top: 40%;
   z-index: 1003;
   -webkit-box-shadow: 0px 0px 10px 6px #889DB0;
