--- a/app/views/users/education/create.js.erb
+++ b/app/views/users/education/create.js.erb
@@ -1,12 +1,12 @@
 // Close the loading lightbox
 closeLightBoxLoading();
 
-<% if @education.errors %>
+<% if @education.errors.any? %>
   <% @education.errors.full_messages.each do |message| %>
     displayGrowlMessages("error","Error!", "<%= message %>", "topRight");
   <% end %>
 <% else %>
-    displayGrowlMessages("success","Success!", "Education Details has been saved", "topRight");
+    displayGrowlMessages("success","Success!", "Education Details has been saved", "top");
 <% end %>
 
 $('#DIV_EDUCATION_DETAILS').html("<%= escape_javascript(render(:partial=>"/users/dashboard/education")) %>");
