--- a/app/views/users/education/edit.js.erb
+++ b/app/views/users/education/edit.js.erb
@@ -1,12 +1,10 @@
 // Close the loading lightbox
 closeLightBoxLoading();
 
-<% if @education.errors %>
+<% if @education.errors.any? %>
   <% @education.errors.full_messages.each do |message| %>
     displayGrowlMessages("error","Error!", "<%= message %>", "topRight");
   <% end %>
-<% else %>
-    displayGrowlMessages("success","Success!", "Education Details has been saved", "topRight");
 <% end %>
 
 
