--- a/app/views/users/dashboard/index.html.erb
+++ b/app/views/users/dashboard/index.html.erb
@@ -14,9 +14,9 @@
         <div id="DIV_TECHNOLOGY_DETAILS">
         <%= render :partial => "/users/dashboard/technologies" %>
         </div>
-        
+        <div id="DIV_EXPERIENCE_DETAILS">
         <%= render :partial => "/users/dashboard/experience" %>
-
+       </div>
         <div id="DIV_EDUCATION_DETAILS">
         <%= render :partial => "/users/dashboard/education" %>
        </div>
