--- a/app/views/users/education/edit.js.erb
+++ b/app/views/users/education/edit.js.erb
@@ -1,5 +1,5 @@
-// Close the loading lightbox
-closeLightBoxLoading();
+$('#DIVID_LIGHT_BOX_CONTAINER_MAIN').css("height", '');
+$("#DIVID_LIGHT_BOX_CONTAINER_MAIN").css("overflow","hidden");
 
 <% if @education.errors.any? %>
   <% @education.errors.full_messages.each do |message| %>
