--- a/app/assets/stylesheets/lightbox.css
+++ b/app/assets/stylesheets/lightbox.css
@@ -2,7 +2,7 @@
   background-color: #FFF;
   left: 40%;
   margin: 0px auto;
-  position: absolute;
+  position: fixed;
   top: 40%;
   z-index: 1003;
   -webkit-box-shadow: 0px 0px 10px 6px #889DB0;
@@ -10,6 +10,7 @@
   box-shadow: 0px 0px 10px 6px #889DB0;
   -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#000000')";
 }
+
 .black_overlay{
   display: block;
   position: fixed;
