--- a/app/views/layouts/after-login.html.erb
+++ b/app/views/layouts/after-login.html.erb
@@ -7,7 +7,7 @@
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
   </head>
-  <body>
+  <body style="margin: 0;">
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
